5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1734_2502.log
== TEST (2019-05-10 17:33:30) 
-- CODE:
from math import *
n = int(input("number natur: "))

cont = 0
soma = 0.0

while (cont < n):
	d = (cont+1)*(3**cont)
	soma = 12**(1/2) * (1/(cont+1)*(3**cont)) + (-1)**(cont+1) * 1 / d
	cont = cont +1
print(soma)
-- OUTPUT:
18595.612386848563
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:50:51) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**cont) *  1/d
	cont = cont +1

print(round(soma,8))
-- ERROR:
File "XXXX", line 10
    cont = cont +1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:51:15) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**cont) *  1/d)
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
3.09e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:51:23) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**cont) *  1/d)
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
3.09e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:51:27) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**cont) *  1/d)
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
3.09e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:51:54) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**(cont) *  1/d)
	cont = cont +1

print(round(soma,8))
-- ERROR:
File "XXXX", line 10
    cont = cont +1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:52:09) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**(cont) *  1/d))
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
6.18e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:52:13) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**(cont) *  1/d))
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
6.18e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:52:14) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + (-1)**(cont) *  1/d))
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
6.18e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:52:57) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = ra * ((1/d + ((-1)**cont *  1/d)))
	cont = cont +1

print(round(soma,8))
-- OUTPUT:
6.18e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:58:36) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (((-1)**cont+1 *  1/d))
	cont = cont +1

ult = ra * soma
print(round(ult,8))
-- OUTPUT:
1.91141483
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:59:13) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1

ult = ra * soma
print(round(ult,8))
-- OUTPUT:
1.60942616
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:00:30) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 0
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1

ult = ra * soma
print(round(ult,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + (-1)**(cont+1) * 1/d
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:01:06) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1

ult = ra * soma
print(round(ult,8))
-- OUTPUT:
1.60942616
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:01:52) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
ult = ra * soma
	print(round(ult,8))
-- ERROR:
File "XXXX", line 12
    print(round(ult,8))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:02:00) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1

	print(round(ult,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(ult,8))
NameError: name 'ult' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:02:06) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

ult = ra * soma
while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1

	print(round(ult,8))
-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:02:21) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	ult = ra * soma
	print(round(ult,8))
-- OUTPUT:
1.73205081
1.58771324
1.61436018
1.60817428
1.60976478
1.6093322
1.60945409
1.60941889
1.60942924
1.60942616
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:02:57) 
-- CODE:
from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))
-- OUTPUT:
0.5
0.45833333
0.46602564
0.46423993
0.46469906
0.46457419
0.46460938
0.46459921
0.4646022
0.46460131
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:55:28) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = 12*(1/2)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	pi = pi * soma
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
2.22144813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:55:52) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	pi = pi * soma
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
1.28255368
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:56:11) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	pi = pi * soma
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
1.28255368
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:56:17) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	pi = pi * soma
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
1.28255368
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:56:28) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	pi = pi * soma
	cont = cont + 1
	
print(round(pi,8))
-- EXECUTION TIME:
0.221695
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
1.28255368
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
0.86758599
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
1.71947958
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:56:34) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	pi = pi * soma
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
1.28255368
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:56:49) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
	
pi = pi * soma
print(round(pi,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:56:55) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
	
pi = pi * soma
print(round(pi,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:57:01) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
	
pi = pi * soma
print(round(pi,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:57:07) 
-- CODE:
'''from math import *
n = int(input("number natur: "))
ra = sqrt(12)
cont = 1
soma = 0.0

while (cont < n):
	d = (2*cont-1)*(3**cont-1)
	soma = soma + (-1)**(cont+1) * 1/d
	cont = cont +1
	print(round(soma,8))'''
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
	
pi = pi * soma
print(round(pi,8))
-- EXECUTION TIME:
0.185255
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:16:40) 
-- CODE:
from math import *

n = int(input("Quantidade de termos desejada para a serie: "))

soma = (1/(1*3**0))
pi = sqrt(12)
cont = 1

while(cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
	
pi = pi * soma
print(round(pi,8))
-- EXECUTION TIME:
0.184929
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
